<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.LoginActivity">

    <Button
        android:id="@+id/menuBtn"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/shape"
        android:textColor="@color/WhiteSmoke"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/purchaseBtn"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/shape"
        android:textColor="@color/WhiteSmoke"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/purchase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textItem"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="@color/WhiteSmoke"
            android:ems="10"
            android:text="@string/Item"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textPrice"
            android:layout_width="75dp"
            android:layout_height="250dp"
            android:layout_marginTop="8dp"
            android:background="@color/WhiteSmoke"
            android:text="@string/Price"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="202dp" />

        <TextView
            android:id="@+id/textQuantity"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:background="@color/WhiteSmoke"
            android:text="@string/Quantity"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/bght"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/subtotalTextView"
            android:layout_width="90dp"
            android:layout_height="75dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="@color/WhiteSmoke"
            android:gravity="center"
            android:layout_weight="2"
            android:text="@string/Subtotal" />

        <TextView
            android:id="@+id/taxTextView"
            android:layout_width="90dp"
            android:layout_height="75dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/WhiteSmoke"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/Tax" />

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="90dp"
            android:layout_height="75dp"
            android:layout_marginBottom="96dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:layout_weight="2"
            android:background="@color/WhiteSmoke"
            android:gravity="center"
            android:text="@string/Total" />

    </LinearLayout>

    <Button
        android:id="@+id/removeAll"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape"
        android:text="@string/remove"
        android:textColor="@color/WhiteSmoke"
        app:layout_constraintBottom_toBottomOf="@+id/bght"
        app:layout_constraintEnd_toStartOf="@+id/purchaseBtn"
        app:layout_constraintStart_toEndOf="@+id/menuBtn"
        app:layout_constraintTop_toTopOf="@+id/bght" />

    <TextView
        android:id="@+id/bght"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/Honeydew"
        android:gravity="center"
        android:text="@string/bght"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.849" />

</android.support.constraint.ConstraintLayout>
